--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,14 +16,14 @@ LINK_DIRECTORIES(
   /usr/lib
 )
 
-OPTION(USE_32BIT "This is a option for address" OFF)
+OPTION(USE_32BIT "This is a option for USE_32BIT" OFF)
 
 if(${USE_32BIT} STREQUAL "ON")
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -march=i686 -O2 -fPIC -DPIC")
 else()
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -O2 -fPIC -DPIC")
 endif()
-
+MESSAGE(${CMAKE_CXX_FLAGS})
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 SET(CMAKE_SHARED_LINKER_FLAGS "-fPIC -DPIC")
