--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 SET(CMAKE_SHARED_LINKER_FLAGS "-fPIC -DPIC")
 SET(CMAKE_MODULE_LINKER_FLAGS "-fPIC -DPIC")
 
+add_definitions(-D_REENTRANT)
+
 ADD_SUBDIRECTORY( src )
 
 ADD_SUBDIRECTORY( include )
